--- a/Css/style.css
+++ b/Css/style.css
@@ -96,10 +96,10 @@ span, h2{
 
 .line{
     display: flex;
-   /*flex-wrap: wrap;*/
+    /* flex-wrap: wrap; */
     margin-left: 15px;
     margin-right: 15px;
-
+    justify-content: space-between;
 }
 
 .line p{
@@ -124,6 +124,10 @@ input:focus,textarea:focus{
 
 .map{
     margin-top: 100px;
+    
+}
+.half-width{
+    flex-wrap: wrap;
 }
 
 footer{
@@ -143,10 +147,9 @@ footer p{
     }
     .half-width{
        flex: 0 0 50%; 
-      max-width: 50%; 
-      } 
-    
-}
+       max-width: 50%; 
+       }  
+} 
 
 @media (min-width:768px) {
     .container{
@@ -170,5 +173,4 @@ footer p{
     .container{
         max-width: 1340px;
     }
-}
-
+} 
